dex.yml
# A namespace for Dex to live in.
apiVersion: v1
kind: Namespace
metadata:
  name: dex
---
# Run Dex.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dex
  namespace: dex
spec:
  # In a real scenario, consider the uptime requirements of things behind Dex authentication to decide how many replicas you need.
  # If also using it for Kubernetes authentication, you may want to use a DaemonSet instead for maximum redundancy.
  replicas: 1
  selector:
    matchLabels:
      app: dex
  template:
    metadata:
      labels:
        app: dex
    spec:
      # Give it Kubernetes API access for session data storage.
      serviceAccountName: dex
      containers:
      - name: dex
        image: quay.io/dexidp/dex:v2.24.0
        command: [/usr/local/bin/dex, serve, /cfg/config.yaml]
        ports:
        - containerPort: 5556
        volumeMounts:
        - name: config
          mountPath: /cfg
        - name: tls
          mountPath: /tls
      volumes:
      - name: config
        configMap:
          name: dex
      - name: tls
        secret:
          secretName: dex-tls
---
# A service for both internal use and for the Ingress.
apiVersion: v1
kind: Service
metadata:
  name: dex
  namespace: dex
spec:
  ports:
  # Use `https` as the port name so Traefik knows to use that for talking to the pod.
  - name: https
    port: 5556
  selector:
    app: dex
---
# Expose Dex to the internet for OAuth initiation and callbacks.
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dex
  namespace: dex
spec:
  rules:
  - host: dex.lvh.me
    http:
      paths:
      - path: /
        backend:
          serviceName: dex
          servicePort: https
