microbot.yml
# Example app using the microbot image.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microbot
spec:
  selector:
    matchLabels:
      app: microbot
  template:
    metadata:
      labels:
        app: microbot
    spec:
      containers:
      - name: microbot
        image: dontrebootme/microbot:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: microbot
spec:
  selector:
    app: microbot
  ports:
  - port: 80
---
# Example of configuring forward-auth middleware on an Ingress.
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: microbot
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth-dex@kubernetescrd
spec:
  rules:
  - host: microbot.lvh.me
    http:
      paths:
      - path: /
        backend:
          serviceName: microbot
          servicePort: 80
