whoami.yml
# Example app using the whoami image.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - image: containous/whoami
        name: whoami
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: whoami
---
# Example of configuring forward-auth middleware on an IngressRoute.
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  routes:
  - match: Host(`whoami.lvh.me`)
    kind: Rule
    services:
    - name: whoami
      port: 80
    middlewares:
    - name: traefik-forward-auth-dex@kubernetescrd
  tls:
    certresolver: default
